--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,98 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@custom-variant dark (&:is(.dark *));
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: var(--font-primary);
+  --font-mono: var(--font-secondary);
+  --color-sidebar-ring: var(--sidebar-ring);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar: var(--sidebar);
+  --color-chart-5: var(--chart-5);
+  --color-chart-4: var(--chart-4);
+  --color-chart-3: var(--chart-3);
+  --color-chart-2: var(--chart-2);
+  --color-chart-1: var(--chart-1);
+  --color-ring: var(--ring);
+  --color-input: var(--input);
+  --color-border: var(--border);
+  --color-destructive: var(--destructive);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-accent: var(--accent);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-muted: var(--muted);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-secondary: var(--secondary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-primary: var(--primary);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-popover: var(--popover);
+  --color-card-foreground: var(--card-foreground);
+  --color-card: var(--card);
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+:root {
+  --radius: 0.5rem;
+  --background: oklch(1 0 0);
+  --foreground: oklch(0.141 0.005 285.823);
+  --card: oklch(1 0 0);
+  --card-foreground: oklch(0.141 0.005 285.823);
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.141 0.005 285.823);
+  --primary: oklch(0.54088 0.24684 292.95093);
+  --primary-foreground: oklch(0.141 0.005 285.823);
+  --secondary: oklch(0.9671 0.00286 264.54197);
+  --secondary-foreground: oklch(0.141 0.005 285.823);
+  --accent: oklch(0.9671 0.00286 264.54197);
+  --accent-foreground: oklch(0.141 0.005 285.823);
+  --destructive: oklch(0.63683 0.20776 25.32589);
+  --destructive-foreground: oklch(0.985 0 0);
+  --muted: oklch(0.96955 0 0);
+  --muted-foreground: oklch(0.141 0.005 285.823);
+  --border: oklch(0.9174 0.00891 302.85253);
+  --input: oklch(0.9174 0.00891 302.85253);
+  --ring: oklch(0.54088 0.24684 292.95093);
+}
+
+.dark {
+  --background: oklch(0.12945 0.02728 261.67111);
+  --foreground: oklch(0.985 0 0);
+  --card: oklch(0.12945 0.02728 261.67111);
+  --card-foreground: oklch(0.985 0 0);
+  --popover: oklch(0.19671 0.01179 302.08719);
+  --popover-foreground: oklch(0.985 0 0);
+  --primary: oklch(0.49075 0.2413 292.58795);
+  --primary-foreground: oklch(0.985 0 0);
+  --secondary: oklch(0.27845 0.02964 256.84798);
+  --secondary-foreground: oklch(0.985 0 0);
+  --accent: oklch(0.27845 0.02964 256.84798);
+  --accent-foreground: oklch(0.985 0 0);
+  --destructive: oklch(0.63683 0.20776 25.32589);
+  --destructive-foreground: oklch(0.985 0 0);
+  --muted: oklch(0.23129 0.07872 265.49269);
+  --muted-foreground: oklch(0.985 0 0);
+  --border: oklch(0.26658 0.01931 301.8943);
+  --input: oklch(0.26658 0.01931 301.8943);
+  --ring: oklch(0.49075 0.2413 292.58795);
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
   }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  body {
+    @apply bg-background text-foreground font-sans;
+  }
 }
