feature: add home section

--- a/app/globals.css
+++ b/app/globals.css
@@ -96,3 +96,15 @@
     @apply bg-background text-foreground font-sans;
   }
 }
+
+.cl-internal-1dauvpw {
+  display: none;
+}
+
+.cl-internal-1g0ikjj {
+  display: none;
+}
+
+.cl-internal-1ieskb4 {
+  display: none;
+}
